<?xml version="1.0" encoding="utf-8"?>
<!--
    SnooZy Charger
    Power Connection manager. Turn the screen off on power connection
    or disconnection, to save battery consumption by the phone's display.

    Copyright (C) 2013 Mudar Noufal <mn@mudar.ca>
    Copyright (C) 2014 Daniel Aleksandersen <code@daniel.priv.no>

    This file is part of SnooZy Charger.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">SnooZy Charger</string>
    <string name="activity_main">Power connection history</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>
    <string name="activity_eula">EULA</string>

    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_eula">License</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate app</string>

    <!--System-->
    <string name="admin_device_extra_desc_text">The app needs to be authorized as a Device administrator to control screen lock…</string>
    <string name="admin_device_app_desc">Allow SnooZy Charger to lock the screen. Zzz…</string>
    <string name="share_intent_title">Discover SnooZy Charger on Google Play</string>

    <!--Settings/Preferences-->
    <string name="prefs_breadcrumb">Settings</string>
    <string name="prefs_category_advanced">Turn off display</string>
    <string name="prefs_category_device_admin">Device Administration</string>
    <string name="prefs_category_cache">Cache</string>
    <string name="prefs_category_other">Other</string>

    <string name="prefs_is_enabled">Enabled</string>
    <string name="prefs_is_disabled">Disabled</string>
    <string name="prefs_has_notifications_title">Notifications</string>
    <string name="prefs_has_vibration_title">Vibrate</string>

    <string name="prefs_ringtone_title">Sound</string>
    <string name="prefs_screen_silent">Silent</string>

    <string name="prefs_screen_lock_status_title">Screen lock status</string>
    <string name="prefs_screen_lock_status_dialog_title">Select screen status</string>
    <string name="prefs_screen_locked">Locked screen</string>
    <string name="prefs_screen_unlocked">Unlocked screen</string>
    <string name="prefs_screen_both">Both</string>
    <string name="prefs_screen_lock_unlocked">Unlocked screen only</string>
    <string name="prefs_screen_lock_locked">Locked screen only</string>
    <string name="prefs_screen_lock_both">Locked and unlocked screen</string>

    <string name="prefs_connection_status_title">Connection status</string>
    <string name="prefs_connection_status_dialog_title">Select connection status</string>
    <string name="prefs_connection_on">Power connection</string>
    <string name="prefs_connection_off">Power disconnection</string>
    <string name="prefs_connection_both">Both</string>
    <string name="prefs_power_connection_on">Power connection only</string>
    <string name="prefs_power_connection_off">Power loss only</string>
    <string name="prefs_power_connection_both">Power connection and disconnection</string>

    <string name="prefs_connection_type_title">Charger type</string>
    <string name="prefs_connection_type_dialog_title">Select charger type</string>
    <string name="prefs_connection_ac">AC adapter</string>
    <string name="prefs_connection_usb">USB port</string>
    <string name="prefs_connection_wireless">Wireless</string>
    <string name="prefs_connection_all">All</string>
    <string name="prefs_power_connection_ac">AC adapter only</string>
    <string name="prefs_power_connection_usb">USB connection only</string>
    <string name="prefs_power_connection_wireless">Wireless charger only</string>
    <string name="prefs_power_connection_all">Any power source</string>

    <string name="prefs_delay_to_lock_title">Screen lock delay</string>
    <string name="prefs_delay_dialog_title">Set lock delay</string>
    <string name="prefs_delay_fast">Immediately</string>
    <string name="prefs_delay_moderate">3 seconds</string>
    <string name="prefs_delay_slow">5 seconds</string>

    <string name="prefs_cache_age_title">Days of history to keep</string>
    <string name="prefs_cache_age_dialog_title">Set history age</string>
    <string name="prefs_cache_age_none">No history</string>
    <string name="prefs_cache_age_small">1 week</string>
    <string name="prefs_cache_age_medium">2 weeks</string>
    <string name="prefs_cache_age_large">1 month</string>
    <string name="prefs_cache_age_all">Keep all</string>

    <string name="prefs_device_admin_title">Device administrator</string>
    <string name="prefs_device_admin_summary_enabled">NOTE: uncheck this to be able to uninstall app</string>
    <string name="prefs_device_admin_summary_disabled">Needed to allow SnooZy to lock the screen</string>

    <!--Notifications-->
    <string name="notify_content_title">Power connection</string>
    <string name="notify_content_text_single_on">External power was connected.</string>
    <string name="notify_content_text_single_off">External power was removed.</string>
    <string name="notify_content_text_multi">Power was connected/disconnected.</string>

    <!-- Toast Notifications -->
    <string name="toast_service_disabled">SnooZy is currently disabled</string>
    <string name="toast_running_no_admin">To allow screen lock, activate as a device administrator</string>

    <!--History ListFragment-->
    <string name="history_empty_list_title">%s your power charger to see the app in action!</string>
    <string name="history_empty_list_settings">Check Settings to make the app useful for you…</string>
    <string name="history_empty_list_title_connect">Connect</string>
    <string name="history_empty_list_title_disconnect">Disconnect</string>

    <!--History Header -->
    <string name="history_header_timestamp">Time</string>
    <string name="history_header_power_connection">Charging</string>
    <string name="history_header_battery_level">Battery</string>

    <!--History Footer -->
    <string name="history_footer_about">SnooZy runs in the background. On power connection and disconnection, the app turns off the screen to save power.</string>

    <!--History ListFragmentItem -->
    <string name="history_item_power_connected">Yes</string>
    <string name="history_item_power_disconnected">No</string>
    <string name="history_item_day_today">Today</string>
    <string name="history_item_day_yesterday">Yesterday</string>
    <string name="history_item_battery_level">%s%%</string>

    <!--About -->
    <string name="about_title">SnooZy Charger Zzz…</string>
    <string name="about_subtitle">Turn off screen display on power connection</string>
    <string name="about_project_version">Version %s</string>
    <string name="about_credits">Android app developed by Mudar&#160;Noufal. Many thanks to G&amp;A.</string>
    <string name="about_source_code">Open source project, available on GitHub. Source code is released under the GPLv3 license from the Free Software Foundation.</string>
    <string name="about_intro">Power connection can turn on display when unwanted. SnooZy avoids intrusive screenlight during nighttime-charging and saves power consumption.</string>
    <string name="about_usage">SnooZy can be very useful with wireless, solar or dynamo chargers, where power connection is hectic! It can also be used for auto-lock or for connection history. Check Settings to make the app fit your needs…</string>

    <!-- Accessibility -->
    <string name="desc_github">GitHub repository</string>
    <string name="desc_credits">Credits</string>

</resources>
