<?xml version="1.0" encoding="utf-8"?>
<!--
    SnooZy Charger
    Power Connection manager. Turn the screen off on power connection
    or disconnection, to save battery consumption by the phone's display.

    Copyright (C) 2013 Mudar Noufal <mn@mudar.ca>

    This file is part of SnooZy Charger.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:cacheColorHint="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    app:slm_isHeader="false"
    app:slm_section_firstPosition="0">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_primary"
        android:clipToPadding="false"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <ProgressBar
        android:id="@id/android:empty"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/text_toolbar_secondary" />

    <LinearLayout
        android:id="@+id/history_empty_list"
        android:layout_width="@dimen/listview_empty_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/history_empty_list_title"
            style="@style/HistoryListEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_empty_list_title" />

        <TextView
            style="@style/HistoryListEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_footer_about" />

        <TextView
            style="@style/HistoryListEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_empty_list_settings" />

    </LinearLayout>


</LinearLayout>